Add integration tests for UI and improve server startup logic